Étape 3 : Implémentez la fonctionnalité des 30 minutes gratuites